# dinghy

./: Cargo.toml
cargo-dinghy/: Cargo.toml
cargo-dinghy/src/: cli.rs  main.rs
cargo-tai/: Cargo.toml
cargo-tai/src/: cli.rs  main.rs
dinghy-build/src/: build_env.rs  lib.rs  utils.rs
dinghy-lib/: Cargo.toml
dinghy-lib/src/: compiler.rs  config.rs  device.rs  lib.rs  overlay.rs  project.rs  toolchain.rs  utils.rs
dinghy-lib/src/android/: device.rs  mod.rs
dinghy-lib/src/host/: device.rs  mod.rs  platform.rs
dinghy-lib/src/ios/: compiler.rs  device.rs  helpers.py  mobiledevice_sys.rs  mod.rs  platform.rs  xcode.rs
dinghy-lib/src/ios/compiler/: mod.rs  test.rs  util.rs
dinghy-lib/src/ios/device/: mod.rs  physical.rs  simulator.rs  utils.rs
dinghy-lib/src/ios/templates/: Info.plist.tmpl
dinghy-lib/src/ios/tools/: ios_deploy.rs  libimobiledevice.rs  lldb.rs  mod.rs  security.rs  xcrun.rs
dinghy-lib/src/platform/: mod.rs  regular_platform.rs
dinghy-lib/src/script/: device.rs
dinghy-lib/src/ssh/: device.rs
dinghy-test/src/: lib.rs
