[package]
name = "dinghy-lib"
version = "0.4.62-pre"
authors = ["Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"]
license = "MIT/Apache-2.0"
description = "Cross-compilation made easier - see main crate cargo-dinghy"
homepage = "https://medium.com/snips-ai/dinghy-painless-rust-tests-and-benches-on-ios-and-android-c9f94f81d305#.c2sx7two8"
repository = "https://github.com/snipsco/dinghy"
keywords = [
    "tests", "mobile", "ios", "android", "cargo"
]
build="build.rs"
categories = [ "development-tools::cargo-plugins", "development-tools::testing" , "development-tools::profiling" ]
readme = "../README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
cargo = "0.52.0"
clap = "2.33.3"
cfg-expr = "0.7.4"
dinghy-build = { path = "../dinghy-build" }
dirs = "3.0.1"
filetime = "0.2.14"
ignore = "0.4.17"
itertools = "0.10.0"
log = "0.4.14"
openssl = "0.10.33"
plist = "1.1.0"
regex = "1.4.5"
semver = "0.11.0"
serde = "1.0.125"
serde_json = "1.0.64"
shellexpand="2.1.0"
simctl = "0.1.1"
tinytemplate = "1.2.1"
toml = "0.5.8"
url = "2.2.1"
walkdir = "2.3.2"
which = "4.1.0"

[dev-dependencies]
tempfile = "3.2.0"

[target.'cfg(target_os="macos")'.dependencies]
tempdir = "0.3.7"
